# spi-adc

./: CMakeLists.txt  README.md
cmake/: arm-none-eabi.cmake
device/: efm32g.ld
src/: main.c
